tests/snapshots/html_test__html_doc_files_rewrite-4.snap
---
source: tests/html_test.rs
expression: files.get(name).unwrap()
---
<meta http-equiv="refresh" content="0; url=..&#x2F;.&#x2F;.&#x2F;~&#x2F;A.html">
